Added INFORMS Presentations

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
-    <style>
+    /*<style>
 
     h3 {
       color: rgb(163,121,44)
@@ -20,7 +20,7 @@
       padding: 0px;
     }
 
-  </style>
+  </style>*/
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -46,10 +46,16 @@
 
 <h3>
 <a name="designer-templates" class="anchor" href="#conference-presentations"><span class="octicon octicon-link"></span></a>Conference Presentations</h3>
-  <h4>ICSP 2013</h4>
-  <p>I had the privilege to travel to Bergamo, Italy to present at the  XIII International Conference on Stochastic Programming (ICSP2013).<br><br>
+  <h4>XIII International Conference on Stochastic Programming 2013 (Bergamo, Italy)</h4>
   <a href="http://dinamico2.unibg.it/icsp2013/doc/ps/1-Christopher%20D.%20Hagmann.pdf" type="name">Integrated Warehouse-Inventory-Transportation Planning under Uncertainty: A Stochastic Integer Quadratically-Constrained Programming Approach</a>.</p>
 
+<h4>INFORMS 2014 (San Francisco, CA)</h4>
+<a href="SWITP_INFORMS2014.pdf" type="name">The Stochastic
+Warehouse-Inventory-Transportation Problem:
+A Branch-and-Bound Method for
+Stochastic Integer Bilinearly-Constrained Programs</a>.</p>
+<a href="NCAA_INFORMS2014.pdf" type="name">Building Perfect Tournament Brackets
+with Data Analytics</a>.</p>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
