--- a/index.html
+++ b/index.html
@@ -3,64 +3,73 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Christopher Hagmann</title>
-
+    <title>Christopher Hagmann by cdhagmann</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    /*<style>
-
-    h3 {
-      color: rgb(163,121,44)
-    }
-
-
-    a[type="name"] {
-      color: rgb(46,175,164);
-      padding: 0px;
-    }
-
-  </style>*/
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/cdhagmann">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>Christopher D. Hagmann</h1>
-        <img src="http://www.gravatar.com/avatar/dc41ea5df1de5d3f193ea41ad197700b?s=200">
-        <br>
-          <p>I am a PhD student at Purdue University in the School of Chemical Engineering. I am currently conducting research with <a href="http://web.ics.purdue.edu/~nkong/" type='name'>Dr. Nan Kong</a>, <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=12436" type='name'>Dr. Joseph Pekny</a>, and <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=11228" type='name'>Dr. Gintaras Reklaitis</a> in the field on mathematical optimization.</p>
 
-    <p class="view"><a href="http://careers.stackoverflow.com/cv/edit/182302">Career 2.0 Profile</a></p>
-    <p class="view"><a href="http://www.linkedin.com/pub/christopher-hagmann/21/1b0/2a4/">LinkedIn Profile</a></p>
-
-    <p class="view"><a href="https://github.com/cdhagmann">View My GitHub Profile</a></p>
-    <p class="view"><a href="cdhagmann_resume.pdf">Resume</a></p>
-
-      </header>
       <section>
+        <div id="title">
+          <h1>Christopher Hagmann</h1>
+          <p>PhD student at Purdue University</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/cdhagmann">cdhagmann</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#conference-presentations"><span class="octicon octicon-link"></span></a>Conference Presentations</h3>
-  <h4>XIII International Conference on Stochastic Programming 2013 (Bergamo, Italy)</h4>
-  <a href="http://dinamico2.unibg.it/icsp2013/doc/ps/1-Christopher%20D.%20Hagmann.pdf" type="name">Integrated Warehouse-Inventory-Transportation Planning under Uncertainty: A Stochastic Integer Quadratically-Constrained Programming Approach</a>.</p>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<h4>INFORMS 2014 (San Francisco, CA)</h4>
-<a href="SWITP_INFORMS2014.pdf" type="name">The Stochastic
-Warehouse-Inventory-Transportation Problem:
-A Branch-and-Bound Method for
-Stochastic Integer Bilinearly-Constrained Programs</a>.</p>
-<a href="NCAA_INFORMS2014.pdf" type="name">Building Perfect Tournament Brackets
-with Data Analytics</a>.</p>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
   </body>
 </html>
