--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
       <section>
         <div id="title">
+          <input type="image" src="hagmann.png" alt="test" width="650" style="float:middle"/>
           <h1>Christopher Hagmann</h1>
           <p>PhD student at Purdue University</p>
           <hr>
