Made image responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <input type="image" src="hagmann.png" alt="test" width="650" style="float:middle"/>
+          <input type="image" src="hagmann.png" alt="test" width="650" style="float:middle; max-width:100%; height: auto" />
           <h1>Christopher Hagmann</h1>
           <p>PhD student at Purdue University</p>
           <hr>
