--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Christopher Hagmann by cdhagmann</title>
@@ -16,51 +17,54 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  </head>
-  <body>
-      <div id="header">
+</head>
+
+<body>
+    <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/cdhagmann">View On GitHub</a></li>
+            <li class="fork"><a href="https://github.com/cdhagmann">View On GitHub</a></li>
         </nav>
-      </div><!-- end header -->
+    </div>
+    <!-- end header -->
 
     <div class="wrapper">
 
-      <section>
-        <div id="title">
-          <input type="image" src="hagmann.png" alt="test" width="650" style="float:middle; max-width:100%; height: auto" />
-          <h1>Christopher Hagmann</h1>
-          <p>PhD student at Purdue University</p>
-          <hr>
-          <br>
-            <p>I am a PhD student at Purdue University in the School of Chemical Engineering. I am currently conducting research with <a href="http://web.ics.purdue.edu/~nkong/" type='name'>Dr. Nan Kong</a>, <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=12436" type='name'>Dr. Joseph Pekny</a>, and <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=11228" type='name'>Dr. Gintaras Reklaitis</a> in the field on mathematical optimization.</p>
-            <hr>
-      <p class="view"><a href="http://careers.stackoverflow.com/cv/edit/182302">Career 2.0 Profile</a></p>
-      <p class="view"><a href="http://www.linkedin.com/pub/christopher-hagmann/21/1b0/2a4/">LinkedIn Profile</a></p>
-      <p class="view"><a href="cdhagmann_resume.pdf">Resume</a></p>
+        <section>
+            <div id="title">
+                <input type="image" src="hagmann.png" alt="test" width="650" style="float:middle; max-width:100%; height: auto" />
+                <h1>Christopher Hagmann</h1>
+                <p>PhD student at Purdue University</p>
+                <hr>
+                <br>
+                <p>I am a PhD student at Purdue University in the School of Chemical Engineering. I am currently conducting research with <a href="http://web.ics.purdue.edu/~nkong/" type='name'>Dr. Nan Kong</a>, <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=12436" type='name'>Dr. Joseph Pekny</a>, and <a href="https://engineering.purdue.edu/ChE/People/ptProfile?id=11228" type='name'>Dr. Gintaras Reklaitis</a> in the field on mathematical optimization.</p>
+                <hr>
+                <p class="view"><a href="http://careers.stackoverflow.com/cv/edit/182302">Career 2.0 Profile</a></p>
+                <p class="view"><a href="http://www.linkedin.com/pub/christopher-hagmann/21/1b0/2a4/">LinkedIn Profile</a></p>
+                <p class="view"><a href="cdhagmann_resume.pdf">Resume</a></p>
+                <p class="view"><a href="Hollow.html">Hollow</a></p>
+                <hr>
+            </div>
 
-<hr>
-        </div>
+            <h3>
+                <a name="designer-templates" class="anchor" href="#conference-presentations"><span class="octicon octicon-link"></span></a>Conference Presentations</h3>
+            <h4>XIII International Conference on Stochastic Programming 2013 (Bergamo, Italy)</h4>
+            <a href="http://dinamico2.unibg.it/icsp2013/doc/ps/1-Christopher%20D.%20Hagmann.pdf" type="name">Integrated Warehouse-Inventory-Transportation Planning under Uncertainty: A Stochastic Integer Quadratically-Constrained Programming Approach</a>.</p>
 
-        <h3>
-<a name="designer-templates" class="anchor" href="#conference-presentations"><span class="octicon octicon-link"></span></a>Conference Presentations</h3>
-  <h4>XIII International Conference on Stochastic Programming 2013 (Bergamo, Italy)</h4>
-  <a href="http://dinamico2.unibg.it/icsp2013/doc/ps/1-Christopher%20D.%20Hagmann.pdf" type="name">Integrated Warehouse-Inventory-Transportation Planning under Uncertainty: A Stochastic Integer Quadratically-Constrained Programming Approach</a>.</p>
-
-<h4>INFORMS 2014 (San Francisco, CA)</h4>
-<a href="SWITP_INFORMS2014.pdf" type="name">The Stochastic
+            <h4>INFORMS 2014 (San Francisco, CA)</h4>
+            <a href="SWITP_INFORMS2014.pdf" type="name">The Stochastic
 Warehouse-Inventory-Transportation Problem:
 A Branch-and-Bound Method for
 Stochastic Integer Bilinearly-Constrained Programs</a>.</p>
-<a href="NCAA_INFORMS2014.pdf" type="name">Building Perfect Tournament Brackets
+            <a href="NCAA_INFORMS2014.pdf" type="name">Building Perfect Tournament Brackets
 with Data Analytics</a>.</p>
 
-<hr>
-<span class="credits left">Project maintained by <a href="https://github.com/cdhagmann">cdhagmann</a></span>
-<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+            <hr>
+            <span class="credits left">Project maintained by <a href="https://github.com/cdhagmann">cdhagmann</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
 
-  </body>
+</body>
+
 </html>
