--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
                                                             <span class="education-date">
                                                                   <span>2012-2015</span>
                                                             </span>
-                                                            <h3>Purdue University</h3>
-                                                            <span class="education-company">Air Force Summer Faculty Fellowship Program</span>
+                                                            <h3>Graduate Research Assistant</h3>
+                                                            <span class="education-company">Purdue University</span>
                                                             <p>Modeled optimal system designs in Python using stochastic disjunctive
                                                                   programming methods for warehouses in supply chain networks
                                                                   using third-party APIs.</p>
