Fix minor formatting issues

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                                       <div class="col-sm-12 clear-mrg text-box">
                                                             <h2 class="title-lg text-upper">About Me</h2>
                                                             <p>
-                                                                  <b>Hello, I’m Christopher Hagmann</b>
+                                                                  <b>Hello, I’m Christopher Hagmann.</b>
                                                             </p>
                                                             <p> I’m a husband, father, developer, and Mormon. I’m a developer
                                                                   by trade, but when I’m not solving the world’s problems
@@ -219,7 +219,7 @@
                                                                   <dd>Christopher Hagmann</dd>
                                                                   <dt class="text-upper">D.o.b.</dt>
                                                                   <dd>30 June 1988</dd>
-                                                                  <dt class="text-upper">address</dt>
+                                                                  <dt class="text-upper">location</dt>
                                                                   <dd>Raleigh, North Carolina</dd>
                                                                   <dt class="text-upper">e-mail</dt>
                                                                   <dd>cdhagmann@gmail.com</dd>
@@ -282,8 +282,10 @@
                                           </section>
                                           <section class="section padd-box brd-btm">
                                                 <div class="row">
+                                                      <h3 class="title-thin text-muted">&nbsp;&nbsp;skills</h3>
+                                                </div>
+                                                <div class="row">
                                                       <div class="col-sm-6 clear-mrg">
-                                                            <h3 class="title-thin text-muted">skills</h3>
                                                             <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">Python</strong>
                                                                   <span class="progress-bar">
@@ -316,8 +318,6 @@
                                                                         </div>
                                                                   </span>
                                                             </div>
-                                                      </div>
-                                                      <div class="col-sm-6 clear-mrg">
                                                             <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">MUMPS</strong>
                                                                   <span class="progress-bar">
@@ -326,6 +326,8 @@
                                                                         </div>
                                                                   </span>
                                                             </div>
+                                                      </div>
+                                                      <div class="col-sm-6 clear-mrg">
                                                             <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">Oracle</strong>
                                                                   <span class="progress-bar">
@@ -377,7 +379,7 @@
                                                             </span>
                                                             <h3>Software Developer Engineer</h3>
                                                             <span class="education-company">TDS Telecom</span>
-                                                            <p>Improved coding style and maintainability for the shared python
+                                                            <p>Improved coding style and maintainability for the shared Python
                                                                   libraries used across various teams and implemented a new
                                                                   API endpoint.</p>
                                                       </div>
@@ -532,7 +534,7 @@
                                                                   </li>
                                                             </ul>
                                                       </header>
-                                                      <h3>Fell free to contact me in case of any question</h3>
+                                                      <h3>Feel free to contact me:</h3>
                                                       <div role="form" class="wpcf7" id="wpcf7-f46-p90-o1" lang="en-US" dir="ltr">
                                                             <div class="screen-reader-response"></div>
                                                             <form action="https://www.enformed.io/5xoehum5" method="post" class="wpcf7-form" novalidate="novalidate">
