Fix minor design issues

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                                 <div class="education">
                                                       <div class="education-box">
                                                             <span class="education-date">
-                                                                  <span>2012 - 2015</span>
+                                                                  <span>Graduated 2015</span>
                                                             </span>
                                                             <h3>
                                                                   <a target="_blank" href="https://themeforest.net/user/px-lab?ref=PX-lab">
@@ -445,7 +445,7 @@
                                                       </div>
                                                       <div class="education-box">
                                                             <span class="education-date">
-                                                                  <span>2005-2007; 2009-2012</span>
+                                                                  <span>Graduated 2012</span>
                                                             </span>
                                                             <h3>
                                                                   <a target="_blank" href="https://themeforest.net/user/px-lab?ref=PX-lab">
@@ -534,7 +534,6 @@
                                                                   </li>
                                                             </ul>
                                                       </header>
-                                                      <h3>Feel free to contact me:</h3>
                                                       <div role="form" class="wpcf7" id="wpcf7-f46-p90-o1" lang="en-US" dir="ltr">
                                                             <div class="screen-reader-response"></div>
                                                             <form action="https://www.enformed.io/5xoehum5" method="post" class="wpcf7-form" novalidate="novalidate">
