--- a/index.html
+++ b/index.html
@@ -295,6 +295,22 @@
                                                                   </span>
                                                             </div>
                                                             <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                                  <strong class="progress-title">Ruby</strong>
+                                                                  <span class="progress-bar">
+                                                                        <div class="container">
+                                                                              <div class="skills advance">.</div>
+                                                                        </div>
+                                                                  </span>
+                                                            </div>
+                                                            <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                                  <strong class="progress-title">Rails</strong>
+                                                                  <span class="progress-bar">
+                                                                        <div class="container">
+                                                                              <div class="skills advance">.</div>
+                                                                        </div>
+                                                                  </span>
+                                                            </div>
+                                                            <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">Linux</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
