--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="HandheldFriendly" content="True">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-      <meta name="description" content="I’m a husband, father, developer, and Mormon.">
+      <meta name="description" content="I’m a husband, father, and developer.">
       <meta property="og:type" content="website">
       <meta property="og:title" content="Christopher Hagmann">
       <meta property="og:url" content="http://cdhagmann.com/index.html">
       <meta property="og:site_name" content="Christopher Hagmann">
-      <meta property="og:description" content="I’m a husband, father, developer, and Mormon.">
+      <meta property="og:description" content="I’m a husband, father, and developer.">
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="Christopehr Hagmann">
-      <meta name="twitter:description" content="I’m a husband, father, developer, and Mormon.">
+      <meta name="twitter:description" content="I’m a husband, father, and developer.">
       <meta name="twitter:creator" content="@cdhagmann">
       <meta name="p:domain_verify" content="87f7f8e6fdf74c0eb91dc84fb3a3e12c" />
       <link rel="shortcut icon" href="/images/favicon.svg">
@@ -194,12 +194,8 @@
                                                             <p>
                                                                   <b>Hello, I’m Christopher Hagmann.</b>
                                                             </p>
-                                                            <p> I’m a husband, father, developer, and Mormon. I’m a developer
-                                                                  by trade, but when I’m not solving the world’s problems
-                                                                  one line of code at a time, I listen to audiobooks, play
-                                                                  RPGs and board games, and experiment with more hands-on
-                                                                  crafts, like bookbinding and woodworking. Welcome to my
-                                                                  corner of the internet.
+                                                            <p> I’m a husband and father. When I’m not trying to solve the world’s problems one line of code at a time, I
+                        listen to audiobooks, play Dungeons and Dragons and board games.
                                                             </p>
                                                       </div>
                                                 </div>
@@ -356,7 +352,7 @@
                                                                   <strong class="progress-title">HTML</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
-                                                                              <div class="skills novice">.</div>
+                                                                              <div class="skills intermediate">.</div>
                                                                         </div>
                                                                   </span>
                                                             </div>
@@ -364,7 +360,7 @@
                                                                   <strong class="progress-title">CSS</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
-                                                                              <div class="skills novice">.</div>
+                                                                              <div class="skills intermediate">.</div>
                                                                         </div>
                                                                   </span>
                                                             </div>
@@ -372,10 +368,26 @@
                                                                   <strong class="progress-title">JavaScript</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
+                                                                              <div class="skills novice">.</div>
+                                                                        </div>
+                                                                  </span>
+                                                            </div>
+                                                            <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                                  <strong class="progress-title">React</strong>
+                                                                  <span class="progress-bar">
+                                                                        <div class="container">
                                                                               <div class="skills beginner">.</div>
                                                                         </div>
                                                                   </span>
                                                             </div>
+                                                            <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                                  <strong class="progress-title">Bootstrap</strong>
+                                                                  <span class="progress-bar">
+                                                                        <div class="container">
+                                                                              <div class="skills beginner">.</div>
+                                                                        </div>
+                                                                  </span>
+                                                            </div>                                                            
                                                       </div>
                                                 </div>
                                           </section>
