--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                                 </div>
                                                 <div class="crt-card-info clear-mrg">
                                                       <h2 class="text-upper">Christopher Hagmann</h2>
-                                                      <p class="text-muted">Python Developer</p>
+                                                      <p class="text-muted">Software Developer</p>
                                                       <ul class="crt-social clear-list">
                                                             <li>
                                                                   <a target="_blank" href="https://www.facebook.com/cdhagmann">
