Update Stackoverflow link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                                                   </a>
                                                             </li>
                                                             <li>
-                                                                  <a target="_blank" href="http://careers.stackoverflow.com/cv/edit/182302">
+                                                                  <a target="_blank" href="https://stackoverflow.com/cv/cdhagmann">
                                                                         <i class="fab fa-stack-overflow"></i>
                                                                   </a>
                                                             </li>
