--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                               </li>
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                     <a href="#exp" title="Experience">
-                                          <i class="fas fa-briefcase"></i>
+                                          <i class="fas fa-building"></i>
+                                          
                                     </a>
                               </li>
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
@@ -51,24 +52,24 @@
                                           <i class="fas fa-graduation-cap"></i>
                                     </a>
                               </li>
-                              <!--                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
+                              <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                     <a href="#cert" title="Certications">
                                           <i class="fas fa-certificate"></i>
                                     </a>
-                              </li>                                                        
+                              </li> -->
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                     <a href="#portfolio" title="Portfolio">
-                                          <i class="fab fa-python"></i>
+                                          <i class="fas fa-briefcase"></i>
                                     </a>
-                              </li>     
-                              <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
+                              </li>
+                              <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
                                     <a href="#blog" title="Blog">
                                           <i class="fab fa-medium-m"></i>
                                     </a>
-                              </li>       -->
+                              </li> -->
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
                                     <a href="#contacts" title="Contacts">
-                                          <i class="far fa-envelope"></i>
+                                          <i class="fas fa-envelope"></i>
                                     </a>
                               </li>
                         </ul>
@@ -143,7 +144,7 @@
                                                       </li>
                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                                             <a href="#exp" title="Experience">
-                                                                  <i class="fas fa-briefcase"></i>
+                                                                  <i class="fas fa-building"></i>
                                                             </a>
                                                       </li>
                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
@@ -151,24 +152,24 @@
                                                                   <i class="fas fa-graduation-cap"></i>
                                                             </a>
                                                       </li>
-                                                      <!--                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
+                                                      <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                                             <a href="#cert" title="Certications">
                                                                   <i class="fas fa-certificate"></i>
                                                             </a>
-                                                      </li>                                                        
+                                                      </li>                                                         -->
                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                                             <a href="#portfolio" title="Portfolio">
-                                                                  <i class="fab fa-python"></i>
+                                                                  <i class="fas fa-briefcase"></i>
                                                             </a>
                                                       </li>
-                                                      <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
+                                                      <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
                                                             <a href="#blog" title="Blog">
                                                                   <i class="fab fa-medium-m"></i>
                                                             </a>
-                                                      </li>      -->
+                                                      </li> -->
                                                       <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-43">
                                                             <a href="#contacts" title="Contacts">
-                                                                  <i class="far fa-envelope"></i>
+                                                                  <i class="fas fa-envelope"></i>
                                                             </a>
                                                       </li>
                                                 </ul>
@@ -306,7 +307,8 @@
                                                                         </div>
                                                                   </span>
                                                             </div>
-                                                            <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                            <div class="progress-bullets crt-animate" role="progressbar"
+                                                                  aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">Ruby</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
@@ -448,8 +450,10 @@
                                                             <span class="education-company">Epic Systems</span>
                                                             <p>Created T-SQL extracts and stored procedures for a
                                                                   dimensional database and maintained serverside code
-                                                                  written in Cache (MUMPS) to assist health care institutions 
-                                                                  with managing population health and measuring HEDIS&trade;
+                                                                  written in Cache (MUMPS) to assist health care
+                                                                  institutions
+                                                                  with managing population health and measuring
+                                                                  HEDIS&trade;
                                                                   outcomes.</p>
                                                             <p>Completed contract work for various health care
                                                                   institutions to assist their existing teams with
@@ -520,24 +524,55 @@
                                     </div>
                               </div>
                         </div>
-                        <!--                         <div class="crt-paper-layers crt-animate" id="portfolio">
+                        <div class="crt-paper-layers crt-animate" id="portfolio">
                               <div class="crt-paper clear-mrg clearfix">
                                     <div class="crt-paper-cont paper-padd clear-mrg">
                                           <section class="section padd-box">
                                                 <h2 class="title-lg text-upper">Portfolio</h2>
-                                                <div class="row">
-                                                      <div class="col-sm-12 clear-mrg text-box">
-                                                            <p style="text-align: center;">For those who are interested in latest trends in graphic and
-                                                                  industrial design may be found useful and intersting to
-                                                                  read my Blog. I am writing daily posts which includes freebies
-                                                                  and giveaways as well. I would be glad to any comment and
-                                                                  will appreciate your questions and feedback.</p>
+                                                      <div class="education">
+                                                            <div class="education-box">
+                                                                  <span class="education-date">
+                                                                        <span>2018</span>
+                                                                  </span>
+                                                                  <h3>
+                                                                        <a href="https://socialdeck.xyz/">SocialDeck</a>
+                                                                  </h3>
+                                                                  <span class="education-company">A centralized contact application built using Rails, GraphQL, and React that allows for information to be updated,
+                                                                  maintained, and shared. <a href="https://github.com/SocialDeck"><i class="fab fa-github"></i></a></span>
+                                                            </div>
+                                                            <div class="education-box">
+                                                                  <span class="education-date">
+                                                                        <span>2018</span>
+                                                                  </span>
+                                                                  <h3>
+                                                                        <a href="https://lifo-qba.herokuapp.com/">LIFO</a>
+                                                                  </h3>
+                                                                  <span class="education-company">A Stack Overflow clone complete with API using Rails and Bootstrap. <a href="https://github.com/cdhagmann/LIFO"><i class="fab fa-github"></i></a></span>
+                                                            </div>
+                                                            <div class="education-box">
+                                                                  <span class="education-date">
+                                                                        <span>2018</span>
+                                                                  </span>
+                                                                  <h3>
+                                                                        <a href="https://hash-rocket.herokuapp.com">HashRocket</a>
+                                                                  </h3>
+                                                                  <span class="education-company">A Hacker News clone using Rails and Bootstrap <a href="https://github.com/cdhagmann/HashRocket"><i class="fab fa-github"></i></a></span>
+                                                            </div>
+                                                            <div class="education-box">
+                                                                  <span class="education-date">
+                                                                        <span>2014</span>
+                                                                  </span>
+                                                                  <h3>
+                                                                        <a href="https://github.com/cdhagmann/Bracketology/blob/master/Paper/Building_Perfect_Brackets.pdf">Bracketology</a>
+                                                                  </h3>
+                                                                  <span class="education-company">A predictive model in Python for creating a winning bracket for the NCAA Men's Tournament using k-Nearest
+                                                                  Neighbor <a href="https://github.com/cdhagmann/Bracketology"><i class="fab fa-github"></i></a></span>
+                                                            </div>
                                                       </div>
-                                                </div>
                                           </section>
                                     </div>
                               </div>
-                        </div>   -->
+                        </div>
                         <!--                         <div class="crt-paper-layers crt-animate"  id="blog">
                               <div class="crt-paper clear-mrg clearfix">
                                     <div class="crt-paper-cont paper-padd clear-mrg">
