--- a/index.html
+++ b/index.html
@@ -634,8 +634,9 @@
                                                             <div class="screen-reader-response"></div>
                                                             <form action="https://www.enformed.io/5xoehum5" method="post"
                                                                   class="wpcf7-form" novalidate="novalidate">
-                                                                  <div style="display: none;">
-                                                                        <input type="hidden" name="*honeypot" />
+                                                                  <div class="contact-form__meta">
+                                                                        <input type="hidden" name="*default_email" value="enformed@cdhagmann.com" />
+                                                                        <input type="text" name="*honeypot" />
                                                                         <input type="hidden" name="_wpcf7" value="46" />
                                                                         <input type="hidden" name="_wpcf7_version"
                                                                               value="4.8" />
