--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" xmlns:fb="http://ogp.me/ns/fb#" xmlns:addthis="http://www.addthis.com/help/api-spec" class="crt">
+<html lang="en-US" xmlns:fb="https://ogp.me/ns/fb#" xmlns:addthis="https://www.addthis.com/help/api-spec" class="crt">
 
 <head>
 
@@ -11,7 +11,7 @@
       <meta name="description" content="I’m a husband, father, and developer.">
       <meta property="og:type" content="website">
       <meta property="og:title" content="Christopher Hagmann">
-      <meta property="og:url" content="http://cdhagmann.com/index.html">
+      <meta property="og:url" content="https://cdhagmann.com/index.html">
       <meta property="og:site_name" content="Christopher Hagmann">
       <meta property="og:description" content="I’m a husband, father, and developer.">
       <meta name="twitter:card" content="summary">
@@ -110,7 +110,7 @@
                                                                   </a>
                                                             </li>
                                                             <li>
-                                                                  <a target="_blank" href="http://www.linkedin.com/in/cdhagmann">
+                                                                  <a target="_blank" href="https://www.linkedin.com/in/cdhagmann">
                                                                         <i class="fab fa-linkedin-in"></i>
                                                                   </a>
                                                             </li>
