--- a/index.html
+++ b/index.html
@@ -618,12 +618,12 @@
                                                                         </a>
                                                                   </li>
                                                                   <li>
-                                                                        <a target="_blank" href="http://careers.stackoverflow.com/cv/edit/182302">
+                                                                        <a target="_blank" href="https://careers.stackoverflow.com/cv/edit/182302">
                                                                               <i class="fab fa-stack-overflow"></i>
                                                                         </a>
                                                                   </li>
                                                                   <li>
-                                                                        <a target="_blank" href="http://www.linkedin.com/in/cdhagmann">
+                                                                        <a target="_blank" href="https://www.linkedin.com/in/cdhagmann">
                                                                               <i class="fab fa-linkedin-in"></i>
                                                                         </a>
                                                                   </li>
