--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                                                   <dt class="text-upper">D.o.b.</dt>
                                                                   <dd>30 June 1988</dd>
                                                                   <dt class="text-upper">location</dt>
-                                                                  <dd>Raleigh, North Carolina</dd>
+                                                                  <dd>Durham, North Carolina</dd>
                                                                   <dt class="text-upper">e-mail</dt>
                                                                   <dd>cdhagmann@gmail.com</dd>
                                                                   <dt class="text-upper">phone</dt>
@@ -312,7 +312,7 @@
                                                                   <strong class="progress-title">Ruby</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
-                                                                              <div class="skills intermediate">.</div>
+                                                                              <div class="skills advance">.</div>
                                                                         </div>
                                                                   </span>
                                                             </div>
@@ -386,10 +386,19 @@
                                                                   <strong class="progress-title">JavaScript</strong>
                                                                   <span class="progress-bar">
                                                                         <div class="container">
-                                                                              <div class="skills novice">.</div>
+                                                                              <div class="skills intermediate">.</div>
                                                                         </div>
                                                                   </span>
                                                             </div>
+                                                            <div class="progress-bullets crt-animate" role="progressbar"
+                                                                  aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
+                                                                  <strong class="progress-title">Semantic UI</strong>
+                                                                  <span class="progress-bar">
+                                                                        <div class="container">
+                                                                              <div class="skills intermediate">.</div>
+                                                                        </div>
+                                                                  </span>
+                                                            </div>                                                            
                                                             <div class="progress-bullets crt-animate" role="progressbar"
                                                                   aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">React</strong>
@@ -421,6 +430,14 @@
                                           <section class="section padd-box brd-btm">
                                                 <h2 class="title-lg text-upper">work experience</h2>
                                                 <div class="education">
+                                                     <div class="education-box">
+                                                            <span class="education-date">
+                                                                  <span>2019 - Current</span>
+                                                            </span>
+                                                            <h3>Software Developer</h3>
+                                                            <span class="education-company">SciMed Solutions</span>
+                                                            <p>Develop custom Rails application for customers</p>
+                                                      </div>
                                                       <div class="education-box">
                                                             <span class="education-date">
                                                                   <span>2018</span>
