--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
                                     <a href="#exp" title="Experience">
                                           <i class="fas fa-building"></i>
-                                          
+
                                     </a>
                               </li>
                               <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41">
@@ -105,7 +105,7 @@
                                                                   </a>
                                                             </li>
                                                             <li>
-                                                                  <a target="_blank" href="https://stackoverflow.com/cv/cdhagmann">
+                                                                  <a target="_blank" href="https://stackoverflow.com/users/2246694/cdhagmann">
                                                                         <i class="fab fa-stack-overflow"></i>
                                                                   </a>
                                                             </li>
@@ -398,7 +398,7 @@
                                                                               <div class="skills intermediate">.</div>
                                                                         </div>
                                                                   </span>
-                                                            </div>                                                            
+                                                            </div>
                                                             <div class="progress-bullets crt-animate" role="progressbar"
                                                                   aria-valuenow="97" aria-valuemin="0" aria-valuemax="10">
                                                                   <strong class="progress-title">React</strong>
