--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@
                                                                         </label>
                                                                   </p>
                                                                   <p>
-                                                                        <label> Your Email (required)
+                                                                        <label for="email"> Your Email (required)
                                                                               <br />
                                                                               <span class="wpcf7-form-control-wrap your-email">
-                                                                                    <input type="email" name="your-email"
+                                                                                    <input id="email" type="email" name="your-email"
                                                                                           value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
                                                                                           aria-required="true"
                                                                                           aria-invalid="false" />
@@ -664,6 +664,7 @@
                                                                         </label>
                                                                   </p>
                                                                   <p>
+                                                                        <input type="hidden" name="_honeypot" value="" />
                                                                         <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" />
                                                                   </p>
                                                                   <div class="wpcf7-response-output wpcf7-display-none"></div>
