--- a/index.html
+++ b/index.html
@@ -397,7 +397,17 @@
                                                 <div class="education">
                                                      <div class="education-box">
                                                             <span class="education-date">
-                                                                  <span>Jan 2019 - Current</span>
+                                                                  <span>Sept 2022 - Current</span>
+                                                            </span>
+                                                            <h3>Software Developer</h3>
+                                                            <span class="education-company">SciMed Solutions</span>
+                                                            <p>Build custom greenfield web applications using Rails and JavaScript based on clients' requirements.</p>
+                                                            <p>Implement features and bug fixes for custom legacy web applications using various versions of Ruby and Rails to continue meeting clients' needs.</p>
+                                                            <p>Update custom legacy web applications using Rails and JavaScript to ensure application security and minimize technical debt.</p>
+                                                      </div>
+                                                     <div class="education-box">
+                                                            <span class="education-date">
+                                                                  <span>Jan 2019 - Sept 2022</span>
                                                             </span>
                                                             <h3>Software Developer</h3>
                                                             <span class="education-company">SciMed Solutions</span>
